--- a/feature_auth/build.gradle
+++ b/feature_auth/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -41,6 +42,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
+
+    implementation "androidx.room:room-ktx:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+
+    implementation 'com.google.dagger:dagger:2.43.2'
+    kapt 'com.google.dagger:dagger-compiler:2.43.2'
+
+    implementation 'com.google.dagger:dagger-android-support:2.43.2'
+    kapt 'com.google.dagger:dagger-android-processor:2.43.2'
+
 
     implementation project(":core")
 
