--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,18 @@ buildscript {
         google()
     }
     ext {
-        navigationVersion = '2.5.1'
+        navigationVersion = '2.5.2'
+        roomVersion = '2.4.3'
+        retrofitVersion = '2.9.0'
+        okhhtpVersion = '4.10.0'
+        glideVersion = '4.13.2'
+        daggerVersion = '2.43.2'
+        splashVersion = '1.0.0'
+        constraintVersion = '2.1.4'
+        materialVersion = '1.6.1'
+        compatVersion = '1.5.1'
+        coreKtxVersion = '1.9.0'
+        fragmentKtxVersion = '1.5.2'
     }
     dependencies {
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion")
