--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,14 @@ buildscript {
     repositories {
         google()
     }
+
     ext {
         navigationVersion = '2.5.2'
-        roomVersion = '2.4.3'
+        roomVersion = '2.6.1'
         retrofitVersion = '2.9.0'
         okhhtpVersion = '4.10.0'
         glideVersion = '4.13.2'
-        daggerVersion = '2.43.2'
+        hiltVersion = '2.46'
         splashVersion = '1.0.0'
         constraintVersion = '2.1.4'
         materialVersion = '1.6.1'
@@ -17,14 +18,18 @@ buildscript {
         coreKtxVersion = '1.9.0'
         fragmentKtxVersion = '1.5.2'
     }
+
     dependencies {
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion")
+        classpath("com.google.dagger:hilt-android-gradle-plugin:$hiltVersion")
     }
 }
+
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.46' apply false
 }
 
 task clean(type: Delete) {
