--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -47,9 +48,18 @@ dependencies {
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
 
+    // Room
     implementation "androidx.room:room-ktx:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
 
+    // Firebase
+    implementation "com.google.firebase:firebase-core:$firebaseCoreVersion"
+    implementation platform("com.google.firebase:firebase-bom:$firebaseBomVersion")
+    implementation "com.google.firebase:firebase-database-ktx:$firebaseDatabaseVersion"
+    implementation "com.google.firebase:firebase-storage-ktx:$firebaseStorageVersion"
+    implementation "com.google.firebase:firebase-auth-ktx:$firebaseAuthVersion"
+
+    // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.okhttp3:okhttp:$okhhtpVersion"
